--- a/templates/auth/password_reset_confirm.html
+++ b/templates/auth/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+ <meta name="robots" content="nofollow, noindex" />
 
 {% block meta_title %}Restore Password{% endblock %}
 {% block meta_description %}{% endblock %}
@@ -35,9 +35,9 @@
             <p>Please enter your new password twice so we can verify you typed it incorrectly.</p>
             <form action="" method="post">{% csrf_token %}
               {{ form.new_password1.errors }}
-              <p class="aligned wide"><label for="id_new_password1">New password:</label><input id="id_new_password1" class="form-control" type="password" name="new_password1"/></p>
+              <p class="aligned wide"><label for="id_new_password1">New password:</label><input id="id_new_password1" class="form-control" type="password" name="new_password1" autocomplete="off" required></p>
               {{ form.new_password2.errors }}
-              <p class="aligned wide"><label for="id_new_password2">Confirm password:</label><input id="id_new_password2" class="form-control" type="password" name="new_password2"/></p>
+              <p class="aligned wide"><label for="id_new_password2">Confirm password:</label><input id="id_new_password2" class="form-control" type="password" name="new_password2" autocomplete="off" required></p>
               <p><button class="btn btn-primary" type="submit">Change my password</button></p>
             </form>
           {% else %}
