--- a/templates/auth/password_update_form.html
+++ b/templates/auth/password_update_form.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+ <meta name="robots" content="nofollow, noindex" />
 
 {% block meta_title %}Restore Password{% endblock %}
 {% block meta_description %}{% endblock %}
@@ -42,21 +42,21 @@
                   {% if form.non_field_errors %}<span class="validation-message">{{form.non_fields_errors|striptags}}</span>{% endif %}
                   <label class="col-sm-5 control-label">Old password</label>
                   <div class="col-sm-5">
-                      <input type="password" name="old_password" class="form-control" required>
+                      <input type="password" name="old_password" class="form-control" autocomplete="off" required>
                       {% if form.old_password.errors %}<span class="validation-message">{{form.old_password.errors|striptags}}</span>{% endif %}
                   </div>
               </div>
               <div class="form-group {% if form.new_password1.errors %}has-error{% endif %}">
                   <label class="col-sm-5 control-label">New password</label>
                   <div class="col-sm-5">
-                      <input type="password" name="new_password1" class="form-control" required>
+                      <input type="password" name="new_password1" class="form-control" autocomplete="off" required>
                       {% if form.new_password1.errors %}<span class="validation-message">{{form.new_password1.errors|striptags}}</span>{% endif %}
                   </div>
               </div>
               <div class="form-group {% if form.new_password2.errors %}has-error{% endif %}">
                   <label class="col-sm-5 control-label">Confirm new password</label>
                   <div class="col-sm-5">
-                      <input type="password" name="new_password2" class="form-control" required>
+                      <input type="password" name="new_password2" class="form-control" autocomplete="off" required>
                       {% if form.new_password2.errors %}<span class="validation-message">{{form.new_password2.errors|striptags}}</span>{% endif %}
                   </div>
               </div>
