--- a/templates/html/footer.html
+++ b/templates/html/footer.html
@@ -4,19 +4,19 @@
     <div class="row">
      <div class="col-md-6 col-sm-6">
       <section>
-       <span class="block-title">Essay <span>Online</span></span>
+       <h1 class="block-title">Essay <span>Online</span></h1>
        <p>Have you ever had a problem dealing with multiple assignments from different classes that should should be written around the same time? Do you sometimes feel like swamped with all the academic work that you do? Maybe there are times when you are worried about your GPA because sometimes you can’t finish all tasks on time? If you can answer to one of these questions “yes” then you are on the right path. Many students struggle with their school work, but some of them found a way to get help with their assignments, especially with those boring essays. What is their secret? They use custom essay help. This solves many problems and creates a way for students to pay more attention and excel in subjects they are interested in.</p>
       </section>
      </div>
 
      <div class="col-md-6 col-sm-6">
       <section>
-       <span class="block-title">Online Essay <span>Writing Services</span></span>
+       <h2 class="block-title">Online Essay <span>Writing Services</span></h2>
        <p>There are few good essay writing services where one can buy essay online. But to be sure that you will receive a good and original paper for the best price you need to  order from the best. Most essay writing companies do not understand what their customers need. We are not one of those companies.</p>       
       </section>
 
       <section>
-       <span class="block-title">Writing <span>Essays</span></span>
+       <h3 class="block-title">Writing <span>Essays</span></h3>
        <p>Writing essay assignments is crucial part of academic curriculum, and sometimes this can be a problem, especially when one has no time to write them, or if one is not experienced yet to write papers the school demands. The answer to all these problems is ordering an essay via essay writing company like EssayCoffee.</p>
       </section>
      </div>
