--- a/templates/orders/order_id_edit.html
+++ b/templates/orders/order_id_edit.html
@@ -46,7 +46,7 @@
       <label class="col-sm-5 control-label">
        Assigment Type
        <span class="tooltip-wrapper">
-        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Assigment Type">
+        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Please, choose the most suitable assignment type of assignment you need.">
          <i class="icon-info-popup"></i>
         </a>
        </span>
@@ -77,7 +77,7 @@
       <label class="col-sm-5 control-label">
        First Draft Deadline
        <span class="tooltip-wrapper">
-        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Pages tooltip">
+        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Please specify when you need your first draft. Make sure that your final submission deadline exceed your first draft deadline by 30% so our writer can make needed corrections before it, if necessary.">
          <i class="icon-info-popup"></i>
         </a>
        </span>
@@ -108,7 +108,7 @@
       <label class="col-sm-5 control-label">
        Subject or Discipline
        <span class="tooltip-wrapper">
-        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Subject or Discipline tooltip">
+        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Make sure to select the subject or discipline of your paper.">
          <i class="icon-info-popup"></i>
         </a>
        </span>
@@ -127,7 +127,7 @@
       <label class="col-sm-5 control-label">
        Topic
        <span class="tooltip-wrapper">
-        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Topic tooltip">
+        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="If you have a topic, then make it clear and concise. If you don’t have any, then just write “Writer’s Choice”.">
          <i class="icon-info-popup"></i>
         </a>
        </span>
@@ -142,7 +142,7 @@
       <label class="col-sm-5 control-label">
        Paper Instructions
        <span class="tooltip-wrapper">
-        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Paper Instructions tooltip">
+        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Please make sure to leave clear and detailed requirements.">
          <i class="icon-info-popup"></i>
         </a>
        </span>
@@ -157,7 +157,7 @@
       <label class="col-sm-5 control-label">
        Number of sources
        <span class="tooltip-wrapper">
-        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Number of sources">
+        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Please specify number of sources writer has to use for your paper.">
          <i class="icon-info-popup"></i>
         </a>
        </span>
@@ -184,7 +184,7 @@
       <label class="col-sm-5 control-label">
        Pages
        <span class="tooltip-wrapper">
-        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Pages">
+        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Title page and bibliography are already included into the order for free. One page is approx. 275 words.">
          <i class="icon-info-popup"></i>
         </a>
        </span>
