--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
-{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+ <meta name="robots" content="nofollow, noindex" />
 
 {% block meta_title %}Login{% endblock %}
 {% block meta_description %}{% endblock %}
@@ -35,13 +35,13 @@
    <div class="form-group {% if form.errors %}has-error{% endif %}">
     <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
     <div class="col-sm-8">
-     <input type="text" name="email" value="{{form.username.value|default:''}}" class="form-control" required>
+     <input type="text" name="email" value="{{form.username.value|default:''}}" class="form-control" autocomplete="off" required>
     </div>
    </div>
    <div class="form-group {% if form.errors %}has-error{% endif %}">
     <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
     <div class="col-sm-8">
-     <input type="password" name="password" class="form-control" required>
+     <input type="password" name="password" class="form-control" autocomplete="off" required>
      {% if auth_error %}
         <span class="validation-message">{{auth_error}}</span>
      {% endif %}
