--- a/templates/auth/password_reset_form.html
+++ b/templates/auth/password_reset_form.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+ <meta name="robots" content="nofollow, noindex" />
 
 {% block meta_title %}Restore Password{% endblock %}
 {% block meta_description %}{% endblock %}
@@ -37,7 +37,7 @@
               <div class="form-group">
                   <label class="col-sm-4 control-label">Email</label>
                   <div class="col-sm-8">
-                      <input type="email" name="email" class="form-control" required>
+                      <input type="email" name="email" class="form-control" autocomplete="off" required>
                   </div>
               </div>
               <div class="form-group">
