--- a/templates/auth/registration.html
+++ b/templates/auth/registration.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
-{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+ <meta name="robots" content="nofollow, noindex" />
 
 {% block meta_title %}Registration{% endblock %}
 {% block meta_description %}{% endblock %}
@@ -43,21 +43,21 @@
        <div class="form-group {% if form.email.errors %} has-error {% endif %}" title="{{form.email.errors|striptags}}">
         <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
         <div class="col-sm-8">
-         <input type="email" name="email" class="form-control" required value="{{form.email.value|default:''}}">
+         <input type="email" name="email" class="form-control" value="{{form.email.value|default:''}}" autocomplete="off" required>
          {% if form.email.errors %}<span class="validation-message">{{form.email.errors|striptags}}</span>{% endif %}
         </div>
        </div>
        <div class="form-group {% if form.first_name.errors %} has-error {% endif %}" title="{{form.first_name.errors|striptags}}">
         <label class="col-sm-4 control-label">First Name <span class="require">*</span></label>
         <div class="col-sm-8">
-         <input type="text" name="first_name" class="form-control" required value="{{form.first_name.value|default:''}}">
+         <input type="text" name="first_name" class="form-control" value="{{form.first_name.value|default:''}}" autocomplete="off" required>
          {% if form.first_name.errors %}<span class="validation-message">{{form.first_name.errors|striptags}}</span>{% endif %}
         </div>
        </div>
        <div class="form-group {% if form.last_name.errors %} has-error {% endif %}" title="{{form.last_name.errors|striptags}}">
         <label class="col-sm-4 control-label">Last Name <span class="require">*</span></label>
         <div class="col-sm-8">
-         <input type="text" name="last_name" class="form-control" required value="{{form.last_name.value|default:''}}">
+         <input type="text" name="last_name" class="form-control" value="{{form.last_name.value|default:''}}" autocomplete="off" required>
          {% if form.last_name.errors %}<span class="validation-message">{{form.last_name.errors|striptags}}</span>{% endif %}
         </div>
        </div>
@@ -80,15 +80,15 @@
        <div class="form-group {% if form.country.errors %} has-error {% endif %}" title="{{form.country.errors|striptags}}">
         <label class="col-sm-4 control-label">Your country <span class="require">*</span></label>
         <div class="col-sm-8">
-         <input type="text" name="country" class="form-control" id="country" value="">
+         <input type="text" name="country" class="form-control" id="country" value="" autocomplete="off">
          {% if form.country.errors %}<span class="validation-message">{{form.country.errors|striptags}}</span>{% endif %}
         </div>
        </div>
        <div class="form-group {% if form.phone.errors %} has-error {% endif %}" title="{{form.phone.errors|striptags}}">
         <label class="col-sm-4 control-label">Your phone <span class="require">*</span></label>
         <div class="col-sm-8">
-                  <input type="hidden" id="tmz" name="timezone">
-		  <input type="tel" name="phone" value="{{form.phone.value|default:''}}" required class="form-control" style="width:226px" maxlength="20">
+		  <input type="hidden" id="tmz" name="timezone" autocomplete="off">
+		  <input type="tel" name="phone" value="{{form.phone.value|default:''}}" class="form-control" style="width:226px" maxlength="20" autocomplete="off" required>
          {% if form.phone.errors %}<span class="validation-message">{{form.phone.errors|striptags}}</span>{% endif %}
         </div>
        </div>
@@ -98,13 +98,13 @@
        <div class="form-group {% if form.password.errors %} has-error {% endif %}">
         <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
         <div class="col-sm-8">
-         <input type="password" name="password" required class="form-control" value="">
+         <input type="password" name="password" class="form-control" value="" autocomplete="off" required>
         </div>
        </div>
        <div class="form-group {% if form.password.errors %} has-error {% endif %}">
         <label class="col-sm-4 control-label">Confirm password <span class="require">*</span></label>
         <div class="col-sm-8">
-         <input type="password" name="password2" required class="form-control" value="">
+         <input type="password" name="password2" class="form-control" value="" autocomplete="off" required>
          {% if form.password.errors %}<span class="validation-message">{{form.password.errors|striptags}}</span>{% endif %}
         </div>
        </div>
